--- a/backend/kb/templates/kb/app.html
+++ b/backend/kb/templates/kb/app.html
@@ -15,6 +15,10 @@
     window.USERNAME = "{{ username|default:''|escapejs }}";
     window.IS_SUPERUSER = {{ is_superuser|yesno:"true,false" }};
     window.CSRF_TOKEN = "{{ csrf_token }}";
+    window.APP_CONFIG = {
+      enableReindex: {{ enable_reindex|yesno:"true,false" }},
+      storeUploadsOnDisk: {{ store_uploads_on_disk|yesno:"true,false" }}
+    };
   </script>
   <script src="https://unpkg.com/react@18/umd/react.production.min.js"></script>
   <script src="https://unpkg.com/react-dom@18/umd/react-dom.production.min.js"></script>
